--- a/wiki/Workbenches/gl.html
+++ b/wiki/Workbenches/gl.html
@@ -33,7 +33,7 @@
 </div>
 <p>FreeCAD, como moitas aplicaci&oacute;ns de dese&ntilde;o modernas como <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Autodesk_Revit">Revit</a> ou <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/CATIA">CATIA</a>, bas&eacute;ase no concepto de <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Workbench">Workbench</a>. Un banco de traballo p&oacute;dese considerar como un conxunto de ferramentas especialmente agrupadas para unha determinada tarefa. Nun taller de mobles tradicional, ter&iacute;as unha mesa de traballo para a persoa que traballa con madeira, outra para a que traballa con pezas de metal e quizais unha terceira para a persoa que monta todas as pezas.
 </p><p>En FreeCAD, apl&iacute;case o mesmo concepto. As ferramentas agr&uacute;panse en bancos de traballo segundo as tarefas coas que est&aacute;n relacionadas.
-</p><p>When you switch from one workbench to another, the tools available on the interface change. Toolbars, command bars and possibly other parts of the interface switch to the new workbench, but the contents of your scene doesn't change. You could, for example, start drawing 2D shapes with the Draft Workbench, then work further on them with the Part Workbench.
+</p><p>Ao cambiar dun banco de traballo a outro, as ferramentas dispo&ntilde;ibles na interface cambian. As barras de ferramentas, as barras de comandos e posiblemente outras partes da interface cambian ao novo banco de traballo, pero o contido da escena non cambia. Poder&iacute;as, por exemplo, comezar a debuxar formas 2D co banco de traballo Draft e despois traballar m&aacute;is nelas co banco de traballo Part.
 </p><p>Note that sometimes a Workbench is referred to as a <i>Module</i>. However, Workbenches and Modules are different entities. A Module is any extension of FreeCAD, while a Workbench is a special type of Module with a GUI configuration (toolbars and menus).
 </p>
 <meta property="mw:PageProp/toc">
@@ -87,12 +87,12 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260115170055
+Cached time: 20260115170131
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.109 seconds
-Real time usage: 0.184 seconds
+CPU time usage: 0.130 seconds
+Real time usage: 0.230 seconds
 Preprocessor visited node count: 219/1000000
 Post&#8208;expand include size: 2305/2097152 bytes
 Template argument size: 414/2097152 bytes
@@ -103,17 +103,17 @@ Unstrip post&#8208;expand size: 4410/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.389      1 -total
- 24.13%    2.266      2 Template:Docnav
- 13.59%    1.276      3 Template:Version
- 12.76%    1.198      5 Template:Incode
- 11.26%    1.057      1 Template:Button
- 11.02%    1.035      2 Template:VersionMinus
- 10.29%    0.966      1 Template:MenuCommand
-  8.64%    0.811      1 Template:Userdocnavi/gl
+100.00%   15.078      1 -total
+ 20.84%    3.143      2 Template:Docnav
+ 19.57%    2.951      5 Template:Incode
+ 17.16%    2.588      3 Template:Version
+ 15.01%    2.263      1 Template:MenuCommand
+  8.40%    1.266      2 Template:VersionMinus
+  7.37%    1.111      1 Template:Button
+  5.05%    0.762      1 Template:Userdocnavi/gl
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115170054 and revision id 1738867. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115170131 and revision id 1738869. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
