--- a/wiki/de/BIM_Setup.html
+++ b/wiki/de/BIM_Setup.html
@@ -56,7 +56,7 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<p>Das Einstellungssystem von FreeCAD, das sich im Men&uuml; unter <b>Bearbeiten &rarr; Einstellungen</b> befindet, ist sehr komplex. Der Dialog <b>BIM-Einstellungen</b> bietet eine vereinfachte Version davon, indem er einige der f&uuml;r die BIM-Arbeit am h&auml;ufigsten verwendeten Einstellungen in einer einfachen Anzeige zusammenfasst. Jede &Auml;nderung dort hat den gleichen Effekt, wie die &Auml;nderung der entsprechenden Einstellung in den Voreinstellungen.
+<p>Das Einstellungssystem von FreeCAD, das sich im Men&uuml; unter <b>Bearbeiten &rarr; Einstellungen</b> befindet, ist sehr komplex. Der Dialog <b>BIM-Einrichtung</b> bietet eine vereinfachte Version davon, indem er einige der f&uuml;r die BIM-Arbeit am h&auml;ufigsten verwendeten Einstellungen in einer einfachen Anzeige zusammenfasst. Jede &Auml;nderung dort hat den gleichen Effekt, wie die &Auml;nderung der entsprechenden Einstellung in den Voreinstellungen.
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
@@ -116,12 +116,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115170913
+Cached time: 20260115170957
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.150 seconds
+CPU time usage: 0.076 seconds
+Real time usage: 0.108 seconds
 Preprocessor visited node count: 359/1000000
 Post&#8208;expand include size: 24985/2097152 bytes
 Template argument size: 9727/2097152 bytes
@@ -132,17 +132,17 @@ Unstrip post&#8208;expand size: 1569/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.894      1 -total
- 47.01%   11.232      1 Template:BIM_Tools_navi/de
- 20.95%    5.006      2 Template:Navigation_menu_2
- 14.27%    3.410      2 Template:Docnav/de
- 13.08%    3.126      1 Template:GuiCommand/de
-  9.27%    2.216      1 Template:Userdocnavi/de
-  8.34%    1.993      1 Template:Button
-  5.84%    1.395      2 Template:MenuCommand
+100.00%   24.869      1 -total
+ 45.90%   11.415      1 Template:BIM_Tools_navi/de
+ 23.52%    5.849      2 Template:Navigation_menu_2
+ 13.58%    3.377      1 Template:GuiCommand/de
+ 12.76%    3.173      1 Template:Userdocnavi/de
+ 12.49%    3.107      2 Template:Docnav/de
+  7.99%    1.986      2 Template:MenuCommand
+  5.03%    1.250      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:201277-0!canonical and timestamp 20260115170912 and revision id 1738873. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:201277-0!canonical and timestamp 20260115170956 and revision id 1738877. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
