Created page with "== Bancos de traballo preinstalados =="

--- a/wiki/Workbenches/gl.html
+++ b/wiki/Workbenches/gl.html
@@ -35,9 +35,10 @@
 </p><p>En FreeCAD, apl&iacute;case o mesmo concepto. As ferramentas agr&uacute;panse en bancos de traballo segundo as tarefas coas que est&aacute;n relacionadas.
 </p><p>Ao cambiar dun banco de traballo a outro, as ferramentas dispo&ntilde;ibles na interface cambian. As barras de ferramentas, as barras de comandos e posiblemente outras partes da interface cambian ao novo banco de traballo, pero o contido da escena non cambia. Poder&iacute;as, por exemplo, comezar a debuxar formas 2D co banco de traballo Draft e despois traballar m&aacute;is nelas co banco de traballo Part.
 </p><p>Ten en conta que &aacute;s veces un Workbench denom&iacute;nase "m&oacute;dulo". Non obstante, os Workbenches e os M&oacute;dulos son entidades diferentes. Un M&oacute;dulo &eacute; calquera extensi&oacute;n de FreeCAD, mentres que un Workbench &eacute; un tipo especial de M&oacute;dulo cunha configuraci&oacute;n GUI (barras de ferramentas e men&uacute;s).
+</p><p><span id="Built-in_workbenches"></span>
 </p>
 <meta property="mw:PageProp/toc">
-<h2><span class="mw-headline" id="Built-in_workbenches">Built-in workbenches</span></h2>
+<h2><span class="mw-headline" id="Bancos_de_traballo_preinstalados">Bancos de traballo preinstalados</span></h2>
 <h3><span class="mw-headline" id="Current">Current</span></h3>
 <p>The workbenches listed below are bundled with every FreeCAD installation.
 </p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: Some rarely used workbenches are disabled by default. These are marked with <code>D</code> below. A disabled workbench can be enabled in the <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferences</a>. Disabled workbenches can still be activated via the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> menu of <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
@@ -87,13 +88,13 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260115170926
+Cached time: 20260115171040
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.138 seconds
-Real time usage: 0.210 seconds
-Preprocessor visited node count: 219/1000000
+CPU time usage: 0.116 seconds
+Real time usage: 0.298 seconds
+Preprocessor visited node count: 220/1000000
 Post&#8208;expand include size: 2305/2097152 bytes
 Template argument size: 414/2097152 bytes
 Highest expansion depth: 5/100
@@ -103,17 +104,17 @@ Unstrip post&#8208;expand size: 4410/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.125      1 -total
- 17.42%    2.460      2 Template:Docnav
- 15.50%    2.189      1 Template:MenuCommand
- 15.14%    2.138      1 Template:Button
- 14.79%    2.090      5 Template:Incode
- 13.17%    1.861      3 Template:Version
- 10.15%    1.434      2 Template:VersionMinus
-  5.84%    0.825      1 Template:Userdocnavi/gl
+100.00%   37.621      1 -total
+ 39.69%   14.930      2 Template:Docnav
+ 14.31%    5.385      2 Template:VersionMinus
+  9.76%    3.673      1 Template:MenuCommand
+  9.17%    3.452      5 Template:Incode
+  8.74%    3.287      3 Template:Version
+  7.13%    2.683      1 Template:Button
+  6.24%    2.346      1 Template:Userdocnavi/gl
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115170925 and revision id 1738875. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115171040 and revision id 1738881. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
