--- a/wiki/de/BIM_Setup.html
+++ b/wiki/de/BIM_Setup.html
@@ -64,7 +64,7 @@
 <ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">BIM-Einrichtung</a></span> dr&uuml;cken.</li>
 <li>Den Men&uuml;eintrag <b>Verwalten &rarr; <span typeof="mw:File"><a href="../index.php?title=BIM_Setup.svg&amp;filetimestamp=20240611075223&amp;.html" class="mw-file-description"><img src="../File/BIM_Setup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> BIM-Einrichtung</b> ausw&auml;hlen.</li></ul></li></ol>
 <p><span typeof="mw:File"><a href="../index.php?title=BIM_setup_screenshot.png&amp;filetimestamp=20200920040346&amp;.html" class="mw-file-description"><img src="../File/BIM_setup_screenshot.png" decoding="async" width="400" height="584" class="mw-file-element" data-file-width="523" data-file-height="764"></a></span>
-</p><p>Schwebt der Mauszeigers &uuml;ber einer Einstellung, wird eine QuickInfo (tooltip) angezeigt, die erl&auml;utert, wof&uuml;r sie verwendet wird und wo die entsprechende Einstellung im allgemeinen FreeCAD-Einstellungssystem zu finden ist.
+</p><p>Schwebt der Mauszeigers &uuml;ber einer Einstellung, wird eine QuickInfo (Tooltipp) angezeigt, die erl&auml;utert, wof&uuml;r sie verwendet wird und wo die entsprechende Einstellung im allgemeinen FreeCAD-Einstellungssystem zu finden ist.
 </p><p><br>
 </p>
 <div class="docnav">
@@ -116,12 +116,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115171015
+Cached time: 20260115171042
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.159 seconds
+CPU time usage: 0.083 seconds
+Real time usage: 0.189 seconds
 Preprocessor visited node count: 359/1000000
 Post&#8208;expand include size: 24981/2097152 bytes
 Template argument size: 9723/2097152 bytes
@@ -132,17 +132,17 @@ Unstrip post&#8208;expand size: 1569/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.392      1 -total
- 46.47%   14.587      1 Template:BIM_Tools_navi/de
- 23.79%    7.468      2 Template:Navigation_menu_2
- 12.73%    3.995      2 Template:Docnav/de
- 12.48%    3.918      1 Template:GuiCommand/de
- 11.76%    3.691      1 Template:Userdocnavi/de
-  8.13%    2.553      1 Template:Button
-  6.03%    1.893      2 Template:MenuCommand
+100.00%   29.914      1 -total
+ 51.35%   15.361      1 Template:BIM_Tools_navi/de
+ 34.05%   10.185      2 Template:Navigation_menu_2
+ 14.67%    4.389      1 Template:GuiCommand/de
+ 14.02%    4.193      2 Template:Docnav/de
+  7.29%    2.181      1 Template:Userdocnavi/de
+  6.85%    2.050      2 Template:MenuCommand
+  3.89%    1.164      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:201277-0!canonical and timestamp 20260115171015 and revision id 1738879. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:201277-0!canonical and timestamp 20260115171041 and revision id 1738883. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
