--- a/wiki/Workbenches/gl.html
+++ b/wiki/Workbenches/gl.html
@@ -5,7 +5,7 @@
 <li><a href="../tr/Workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Tezgahlar (12% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Workbenches.html" class="mw-pt-progress mw-pt-progress--med" title="Bancos de Trabajo (33% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Workbenches.html" class="mw-pt-progress mw-pt-progress--complete" title="Ateliers (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="gl" dir="ltr">galego</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="gl" dir="ltr">galego</span></li>
 <li><a href="../hr/Workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Radne povr&scaron;ine (7% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/Workbenches.html" class="mw-pt-progress mw-pt-progress--complete" title="Ambienti di Lavoro (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../hu/Workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Workbenches (2% translated)" lang="hu" dir="ltr">magyar</a></li>
@@ -39,7 +39,9 @@
 </p>
 <meta property="mw:PageProp/toc">
 <h2><span class="mw-headline" id="Bancos_de_traballo_preinstalados">Bancos de traballo preinstalados</span></h2>
-<h3><span class="mw-headline" id="Current">Current</span></h3>
+<p><span id="Current"></span>
+</p>
+<h3><span class="mw-headline" id="Actual">Actual</span></h3>
 <p>The workbenches listed below are bundled with every FreeCAD installation.
 </p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: Some rarely used workbenches are disabled by default. These are marked with <code>D</code> below. A disabled workbench can be enabled in the <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferences</a>. Disabled workbenches can still be activated via the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> menu of <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
 </p>
@@ -88,13 +90,13 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260115171040
+Cached time: 20260115171053
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.116 seconds
-Real time usage: 0.298 seconds
-Preprocessor visited node count: 220/1000000
+CPU time usage: 0.113 seconds
+Real time usage: 0.330 seconds
+Preprocessor visited node count: 221/1000000
 Post&#8208;expand include size: 2305/2097152 bytes
 Template argument size: 414/2097152 bytes
 Highest expansion depth: 5/100
@@ -104,17 +106,17 @@ Unstrip post&#8208;expand size: 4410/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.621      1 -total
- 39.69%   14.930      2 Template:Docnav
- 14.31%    5.385      2 Template:VersionMinus
-  9.76%    3.673      1 Template:MenuCommand
-  9.17%    3.452      5 Template:Incode
-  8.74%    3.287      3 Template:Version
-  7.13%    2.683      1 Template:Button
-  6.24%    2.346      1 Template:Userdocnavi/gl
+100.00%   36.710      1 -total
+ 34.88%   12.806      2 Template:Docnav
+ 19.35%    7.102      3 Template:Version
+ 12.15%    4.460      5 Template:Incode
+  9.32%    3.423      1 Template:MenuCommand
+  7.82%    2.871      1 Template:Userdocnavi/gl
+  5.76%    2.115      2 Template:VersionMinus
+  5.14%    1.887      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115171040 and revision id 1738881. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411329-0!canonical and timestamp 20260115171053 and revision id 1738885. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
