Updated page BIM Layers/de

--- a/wiki/de/BIM_Layers.html
+++ b/wiki/de/BIM_Layers.html
@@ -56,7 +56,7 @@
 <p>Die <b>Ebenenverwaltung</b> erm&ouml;glicht <a href="../de/Draft_Layer.html" title="Draft Layer/de">Ebenen</a> zu verwalten. Ebenen sind eine spezielle Art von Gruppe (wie fr&uuml;her Transparentfolien, die zu einer Gesamtzeichnung &uuml;bereinander gelegt wurden), die die visuellen Eigenschaften der auf ihnen platzierten Objekte steuern. Werden die Eigenschaften der Ebenen ge&auml;ndert, wie z. B. Linienbreite, Linienfarbe, Formfarbe und Transparenz, werden die &Auml;nderungen auf ihre untergeordneten Objekte &uuml;bertragen. Ebenen greifen nicht in andere FreeCAD-Strukturen wie <a href="../de/Std_Group.html" title="Std Group/de">Gruppen</a> oder <a href="../de/Arch_BuildingPart.html" title="Arch BuildingPart/de">Geb&auml;udeteile</a> ein, so dass jedes Objekt gleichzeitig Teil einer Ebene und Teil einer Gruppe sein kann.
 </p><p><span typeof="mw:File"><a href="../index.php?title=BIM_layers_screenshot.png&amp;filetimestamp=20200416095529&amp;.html" class="mw-file-description"><img src="../File/BIM_layers_screenshot.png" decoding="async" width="600" height="294" class="mw-file-element" data-file-width="1295" data-file-height="634"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Layers-Manager</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Ebenenverwaltung</p>
 <p>Ebenen werden von/nach <a href="../de/Arch_IFC.html" title="Arch IFC/de">IFC</a> und <a href="../de/Draft_DXF.html" title="Draft DXF/de">DXF/DWG</a> importiert und exportiert.
 </p>
 <div class="mw-translate-fuzzy">
@@ -135,15 +135,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115171929
+Cached time: 20260115171943
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.211 seconds
+CPU time usage: 0.069 seconds
+Real time usage: 0.108 seconds
 Preprocessor visited node count: 393/1000000
-Post&#8208;expand include size: 26021/2097152 bytes
-Template argument size: 9772/2097152 bytes
+Post&#8208;expand include size: 26025/2097152 bytes
+Template argument size: 9774/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -151,18 +151,18 @@ Unstrip post&#8208;expand size: 1117/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.767      1 -total
- 47.33%   30.655      1 Template:BIM_Tools_navi/de
- 27.23%   17.633      2 Template:Navigation_menu_2
- 16.63%   10.771      1 Template:Userdocnavi/de
- 14.55%    9.422      2 Template:Docnav/de
-  7.90%    5.115      1 Template:GuiCommand/de
-  4.63%    2.998      2 Template:Button
-  4.12%    2.667      1 Template:Caption
-  2.96%    1.916      1 Template:MenuCommand
+100.00%   19.058      1 -total
+ 55.48%   10.573      1 Template:BIM_Tools_navi/de
+ 26.28%    5.009      2 Template:Navigation_menu_2
+ 11.42%    2.176      1 Template:GuiCommand/de
+  8.77%    1.671      2 Template:Docnav/de
+  7.40%    1.410      1 Template:Userdocnavi/de
+  4.94%    0.941      1 Template:Caption
+  4.52%    0.861      2 Template:Button
+  4.52%    0.861      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115171929 and revision id 1738914. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115171943 and revision id 1738916. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
