Updated page BIM Layers/de

--- a/wiki/de/BIM_Layers.html
+++ b/wiki/de/BIM_Layers.html
@@ -58,12 +58,8 @@
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Ebenenverwaltung</p>
 <p>Ebenen werden von/nach <a href="../de/Arch_IFC.html" title="Arch IFC/de">IFC</a> und <a href="../de/Draft_DXF.html" title="Draft DXF/de">DXF/DWG</a> importiert und exportiert.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Der Ebenenverwalter erm&ouml;glicht die Ebenen zu verwalten, Ebenen hinzuzuf&uuml;gen, zu entfernen oder ihre visuellen Eigenschaften zu &auml;ndern. Um Objekte zu einer Ebene hinzuzuf&uuml;gen, werden sie einfach auf die Ebene in der <a href="../Tree_view.html" class="mw-redirect" title="Tree view">Baumansicht</a> gezogen. Um sie zu entfernen, werden sie aus der Ebene herausgezogen und auf dem Dokumentstamm abgelegt.
-</p>
-</div>
-<p><span id="NativeIFC"></span>
+</p><p>Die Ebenenverwaltung erm&ouml;glicht die Ebenen zu verwalten, Ebenen hinzuzuf&uuml;gen, zu entfernen oder ihre visuellen Eigenschaften zu &auml;ndern. Um Objekte zu einer Ebene hinzuzuf&uuml;gen, werden sie einfach auf die Ebene in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> gezogen. Um sie zu entfernen, werden sie aus der Ebene herausgezogen und auf dem Dokumentstamm abgelegt.
+</p><p><span id="NativeIFC"></span>
 </p>
 <h2><span class="mw-headline" id="Natives_IFC">Natives IFC</span></h2>
 <p>Dieses Werkzeug ist exakt das Gleiche wie das  <a href="../de/Draft_LayerManager.html" title="Draft LayerManager/de">Draft EbenenManager</a>-Werkzeug, und erzeugt das gleiche Layer-Objekt. Es gibt nur einen Unterschied: Es unterst&uuml;tzt das <a href="../index.php?title=NativeIFC/de&amp;action=edit&amp;redlink=1.html" class="new" title="NativeIFC/de (page does not exist)">Native IFC</a>-Objekt:
@@ -135,13 +131,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115171943
+Cached time: 20260115172026
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.108 seconds
-Preprocessor visited node count: 393/1000000
+CPU time usage: 0.089 seconds
+Real time usage: 0.160 seconds
+Preprocessor visited node count: 392/1000000
 Post&#8208;expand include size: 26025/2097152 bytes
 Template argument size: 9774/2097152 bytes
 Highest expansion depth: 6/100
@@ -151,18 +147,18 @@ Unstrip post&#8208;expand size: 1117/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.058      1 -total
- 55.48%   10.573      1 Template:BIM_Tools_navi/de
- 26.28%    5.009      2 Template:Navigation_menu_2
- 11.42%    2.176      1 Template:GuiCommand/de
-  8.77%    1.671      2 Template:Docnav/de
-  7.40%    1.410      1 Template:Userdocnavi/de
-  4.94%    0.941      1 Template:Caption
-  4.52%    0.861      2 Template:Button
-  4.52%    0.861      1 Template:MenuCommand
+100.00%   28.312      1 -total
+ 32.98%    9.336      1 Template:BIM_Tools_navi/de
+ 19.73%    5.585      2 Template:Navigation_menu_2
+ 18.22%    5.159      1 Template:GuiCommand/de
+ 13.68%    3.873      2 Template:Docnav/de
+ 11.10%    3.142      1 Template:Caption
+  8.40%    2.377      1 Template:Userdocnavi/de
+  6.80%    1.924      1 Template:MenuCommand
+  6.09%    1.725      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115171943 and revision id 1738916. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115172026 and revision id 1738918. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
