--- a/wiki/cs/Interface.html
+++ b/wiki/cs/Interface.html
@@ -14,7 +14,9 @@
 <li><a href="../ja/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="&#12518;&#12540;&#12470;&#12540;&#12539;&#12452;&#12531;&#12479;&#12501;&#12455;&#12540;&#12473; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Interface.html" class="mw-pt-progress mw-pt-progress--med" title="&#51064;&#53552;&#54168;&#51060;&#49828; (59% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p>The FreeCAD <a href="../Interface.html" title="Interface">interface</a> is based on Qt, a well known graphical user interface (GUI) toolkit, particularly used in Linux, but also available in Windows and MacOS.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_interface_base_divisions.svg&amp;filetimestamp=20200314201207&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_interface_base_divisions.svg" decoding="async" width="1024" height="563" class="mw-file-element" data-file-width="1807" data-file-height="994"></a></span>
 </p>
@@ -121,13 +123,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115172150
+Cached time: 20260115172158
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.135 seconds
-Preprocessor visited node count: 347/1000000
+CPU time usage: 0.062 seconds
+Real time usage: 0.095 seconds
+Preprocessor visited node count: 348/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
 Highest expansion depth: 5/100
@@ -137,18 +139,18 @@ Unstrip post&#8208;expand size: 2528/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.582      1 -total
- 38.84%    9.159      1 Template:Interface_navi/cs
- 18.91%    4.459      1 Template:Userdocnavi/cs
- 16.33%    3.850      7 Template:StdMenu
- 11.30%    2.665      2 Template:Navigation_menu_2
-  9.62%    2.268      1 Template:Caption
-  7.62%    1.796     20 Template:MenuCommand
-  6.06%    1.430      1 Template:TOCright
-  3.77%    0.889      1 Template:Version
+100.00%   17.737      1 -total
+ 32.07%    5.688      1 Template:Interface_navi/cs
+ 20.57%    3.649      1 Template:Userdocnavi/cs
+ 18.59%    3.298      7 Template:StdMenu
+ 13.57%    2.407      2 Template:Navigation_menu_2
+  8.32%    1.476      1 Template:Caption
+  7.60%    1.349     20 Template:MenuCommand
+  5.88%    1.042      1 Template:TOCright
+  5.68%    1.008      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411341-0!canonical and timestamp 20260115172150 and revision id 1738922. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411341-0!canonical and timestamp 20260115172158 and revision id 1738924. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
