Created page with "Rozhraní FreeCADu je založeno na Qt, známém grafickém uživatelském rozhraní (GUI), které se používá zejména v systému Linux, ale je dostupné také pro Windows a MacOS."

--- a/wiki/cs/Interface.html
+++ b/wiki/cs/Interface.html
@@ -17,7 +17,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
-<p>The FreeCAD <a href="../Interface.html" title="Interface">interface</a> is based on Qt, a well known graphical user interface (GUI) toolkit, particularly used in Linux, but also available in Windows and MacOS.
+<p>Rozhran&iacute; FreeCADu je zalo&#382;eno na Qt, zn&aacute;m&eacute;m grafick&eacute;m u&#382;ivatelsk&eacute;m rozhran&iacute; (GUI), kter&eacute; se pou&#382;&iacute;v&aacute; zejm&eacute;na v syst&eacute;mu Linux, ale je dostupn&eacute; tak&eacute; pro Windows a MacOS.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_interface_base_divisions.svg&amp;filetimestamp=20200314201207&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_interface_base_divisions.svg" decoding="async" width="1024" height="563" class="mw-file-element" data-file-width="1807" data-file-height="994"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Standard interface in v0.19.</p>
@@ -123,13 +123,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115172158
+Cached time: 20260115172256
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.062 seconds
-Real time usage: 0.095 seconds
-Preprocessor visited node count: 348/1000000
+CPU time usage: 0.072 seconds
+Real time usage: 0.116 seconds
+Preprocessor visited node count: 347/1000000
 Post&#8208;expand include size: 11765/2097152 bytes
 Template argument size: 3370/2097152 bytes
 Highest expansion depth: 5/100
@@ -139,18 +139,18 @@ Unstrip post&#8208;expand size: 2528/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.737      1 -total
- 32.07%    5.688      1 Template:Interface_navi/cs
- 20.57%    3.649      1 Template:Userdocnavi/cs
- 18.59%    3.298      7 Template:StdMenu
- 13.57%    2.407      2 Template:Navigation_menu_2
-  8.32%    1.476      1 Template:Caption
-  7.60%    1.349     20 Template:MenuCommand
-  5.88%    1.042      1 Template:TOCright
-  5.68%    1.008      1 Template:Version
+100.00%   23.054      1 -total
+ 34.22%    7.888      1 Template:Interface_navi/cs
+ 22.36%    5.155      7 Template:StdMenu
+ 21.05%    4.853      1 Template:Userdocnavi/cs
+ 17.33%    3.995      2 Template:Navigation_menu_2
+  7.04%    1.623     20 Template:MenuCommand
+  6.04%    1.393      1 Template:Caption
+  5.37%    1.237      1 Template:TOCright
+  4.70%    1.084      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411341-0!canonical and timestamp 20260115172158 and revision id 1738924. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411341-0!canonical and timestamp 20260115172256 and revision id 1738928. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
