Created page with "{{Caption|Standardní rozhraní ve verzi 0.19.}}"

--- a/wiki/cs/Interface.html
+++ b/wiki/cs/Interface.html
@@ -20,7 +20,7 @@
 <p>Rozhran&iacute; FreeCADu je zalo&#382;eno na Qt, zn&aacute;m&eacute;m grafick&eacute;m u&#382;ivatelsk&eacute;m rozhran&iacute; (GUI), kter&eacute; se pou&#382;&iacute;v&aacute; zejm&eacute;na v syst&eacute;mu Linux, ale je dostupn&eacute; tak&eacute; pro Windows a MacOS.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_interface_base_divisions.svg&amp;filetimestamp=20200314201207&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_interface_base_divisions.svg" decoding="async" width="1024" height="563" class="mw-file-element" data-file-width="1807" data-file-height="994"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Standard interface in v0.19.</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Standardn&iacute; rozhran&iacute; ve verzi 0.19.</p>
 <p>The main window of the application can be roughly divided into 11 sections:
 </p>
 <ol><li>The <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a>, which can contain different tabbed windows</li>
@@ -123,15 +123,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115172307
+Cached time: 20260115172427
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.071 seconds
-Real time usage: 0.112 seconds
+Real time usage: 0.105 seconds
 Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 11765/2097152 bytes
-Template argument size: 3370/2097152 bytes
+Post&#8208;expand include size: 11781/2097152 bytes
+Template argument size: 3378/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -139,18 +139,18 @@ Unstrip post&#8208;expand size: 2528/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.501      1 -total
- 35.30%    7.236      1 Template:Interface_navi/cs
- 23.92%    4.904      1 Template:Userdocnavi/cs
- 17.79%    3.647      2 Template:Navigation_menu_2
- 14.18%    2.907      7 Template:StdMenu
-  7.75%    1.588      1 Template:TOCright
-  6.99%    1.434     20 Template:MenuCommand
-  6.47%    1.327      1 Template:Caption
-  4.71%    0.966      1 Template:Version
+100.00%   20.119      1 -total
+ 33.82%    6.804      1 Template:Interface_navi/cs
+ 23.29%    4.686      1 Template:Userdocnavi/cs
+ 16.96%    3.412      2 Template:Navigation_menu_2
+ 15.49%    3.117      7 Template:StdMenu
+  8.28%    1.666     20 Template:MenuCommand
+  6.33%    1.273      1 Template:Caption
+  6.26%    1.260      1 Template:TOCright
+  5.41%    1.088      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411341-0!canonical and timestamp 20260115172307 and revision id 1738928. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411341-0!canonical and timestamp 20260115172427 and revision id 1738937. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
