Created page with "* Die [[BIM_Layers/de|BIM Ebenenverwaltung]] nutzen, um neue BIM-Ebenen zu erstellen. Um [[Draft_Layer/de|Draft Ebenen]] zu erstellen, die Schaltfläche  [[File:Draft_tray_button_layer.png]] im [[Draft_Tray/de|Draft Fach]] drücken. * [[Draft_Layer/de|Draft Ebenen]] weisen leicht abweichende Einstellungen von BIM-Ebenen auf. Diese nicht vermischen, es sei denn, man versteht die [https://forum.freecad.org/viewtopic.php?t=102246 Unterschiede]."

--- a/wiki/de/BIM_Layers.html
+++ b/wiki/de/BIM_Layers.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">BIM Layers/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-BIM+Layers&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../BIM_Layers.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="BIM Layers (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--med" title="BIM Calques (50% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/BIM_Layers.html" class="mw-pt-progress mw-pt-progress--low" title="BIM: Gestione degli strati (11% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -78,8 +78,8 @@
 </p><p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
-<ul><li>Use the <a href="../BIM_Layers.html" title="BIM Layers">BIM Layers Manager</a> to create new BIM Layers. To create <a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> press the <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="../File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> button on the <a href="../Draft_Tray.html" title="Draft Tray">Draft Tray</a>.</li>
-<li><a href="../Draft_Layer.html" title="Draft Layer">Draft Layers</a> have slightly different settings from BIM Layers. Do not mix them unless you understand the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=102246">differences</a>.</li></ul>
+<ul><li>Die <a class="mw-selflink selflink">BIM Ebenenverwaltung</a> nutzen, um neue BIM-Ebenen zu erstellen. Um <a href="../de/Draft_Layer.html" title="Draft Layer/de">Draft Ebenen</a> zu erstellen, die Schaltfl&auml;che  <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Draft_tray_button_layer.png&amp;filetimestamp=20210724134408&amp;.html" class="mw-file-description"><img src="../File/Draft_tray_button_layer.png" decoding="async" width="73" height="22" class="mw-file-element" data-file-width="73" data-file-height="22"></a></span> im <a href="../de/Draft_Tray.html" title="Draft Tray/de">Draft Fach</a> dr&uuml;cken.</li>
+<li><a href="../de/Draft_Layer.html" title="Draft Layer/de">Draft Ebenen</a> weisen leicht abweichende Einstellungen von BIM-Ebenen auf. Diese nicht vermischen, es sei denn, man versteht die <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=102246">Unterschiede</a>.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -131,11 +131,11 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260115172652
+Cached time: 20260115172911
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.091 seconds
+CPU time usage: 0.093 seconds
 Real time usage: 0.136 seconds
 Preprocessor visited node count: 393/1000000
 Post&#8208;expand include size: 26034/2097152 bytes
@@ -143,22 +143,22 @@ Template argument size: 9783/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1118/5000000 bytes
+Unstrip post&#8208;expand size: 1122/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.747      1 -total
- 44.20%   11.381      1 Template:BIM_Tools_navi/de
- 20.62%    5.310      2 Template:Navigation_menu_2
- 17.18%    4.424      2 Template:Docnav/de
- 13.32%    3.430      1 Template:GuiCommand/de
- 10.45%    2.690      1 Template:Userdocnavi/de
-  5.17%    1.330      1 Template:Caption
-  3.85%    0.991      2 Template:Button
-  3.65%    0.940      1 Template:MenuCommand
+100.00%   20.557      1 -total
+ 49.99%   10.276      1 Template:BIM_Tools_navi/de
+ 29.69%    6.103      2 Template:Navigation_menu_2
+ 10.45%    2.149      2 Template:Docnav/de
+ 10.45%    2.148      1 Template:Userdocnavi/de
+  9.64%    1.982      1 Template:GuiCommand/de
+  6.00%    1.233      1 Template:Caption
+  5.28%    1.086      2 Template:Button
+  5.06%    1.040      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115172652 and revision id 1738947. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:239159-0!canonical and timestamp 20260115172911 and revision id 1738953. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
